--- a/spring6-004-scope/pom.xml
+++ b/spring6-004-scope/pom.xml
@@ -34,6 +34,12 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
+        <!--springmvc-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework</groupId>-->
+<!--            <artifactId>spring-webmvc</artifactId>-->
+<!--            <version>6.0.11</version>-->
+<!--        </dependency>-->
     </dependencies>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
